[gd_scene load_steps=5 format=2]

[ext_resource path="res://Ejecutable/Juego/Escenarios/Potenciadores/P.3_Cannon/Balika/balika.gd" type="Script" id=1]
[ext_resource path="res://Ejecutable/Juego/Escenarios/Potenciadores/P.3_Cannon/Balika/Modelo/balika.dae" type="PackedScene" id=2]

[sub_resource type="BoxShape" id=1]

extents = Vector3( 0.0812426, 0.0699589, 0.0699589 )

[sub_resource type="BoxShape" id=2]

extents = Vector3( 0.30244, 0.122777, 0.0997164 )

[node name="Bala" type="RigidBody"]

input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = false
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
axis_lock_linear_x = false
axis_lock_linear_y = false
axis_lock_linear_z = false
axis_lock_angular_x = false
axis_lock_angular_y = false
axis_lock_angular_z = false
linear_velocity = Vector3( 0, 0, 0 )
linear_damp = -1.0
angular_velocity = Vector3( 0, 0, 0 )
angular_damp = -1.0
script = ExtResource( 1 )

[node name="Scene Root" parent="." index="0" instance=ExtResource( 2 )]

[node name="CollisionShape" type="CollisionShape" parent="." index="1"]

shape = SubResource( 1 )
disabled = false

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="." index="2"]

aabb = AABB( -1, -1, -1, 2, 2, 2 )

[node name="Timer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = true

[node name="Area" type="Area" parent="." index="4"]

input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0

[node name="CollisionShape" type="CollisionShape" parent="Area" index="0"]

shape = SubResource( 2 )
disabled = false

[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]


